# Arzuparreta

./: .gitignore  AGENTS.md  ANDROID_APK.md  CLAUDE.md  Makefile  README.md  SECURITY.md  app.json  docker-compose.yml  eas.json  package-lock.json  portfolio.json  pyproject.toml
.cursor/rules/: docs-and-artifacts.mdc  git-branch-workflow.mdc  git-return-to-develop.mdc
.github/workflows/: ci.yml  (+5 more)
automation/: README.md
catalog/: README.md  projects.yaml  taxonomy.yaml
cv/: README.md
db/: __init__.py  models.py  session.py
embedder/: providers.py
eval/: README.md  models.py  runner.py  sft_export.py
ingestor/: __init__.py  docker_json.py  plain_text.py
knowledge/: README.md  link-map.md  projects-index.md
logpilot/: main.py  settings.py
platform/: README.md
profile/: public.en.json
projects/: README.md  projects.json
query/: __init__.py  agent_loop.py  cpu_thermal_on_demand.py  disk_usage_on_demand.py  host_services_on_demand.py  intent.py  inventory.py  journalctl_on_demand.py  ollama_chat.py  rag.py  since_parse.py
scripts/: github-bootstrap-pages.sh  refresh-knowledge-web.mjs  sync-readme-projects.mjs  sync-readme.mjs
systems/: README.md
tests/: test_agent_loop_prompt.py  test_disk_usage_on_demand_query.py  test_disk_usage_tool.py  test_export_eval_sft.py  test_golden_intent.py  test_host_services_on_demand.py  test_journal_ingest.py  test_parsed_service_fields.py  test_rag_agent_journal.py  test_rag_context.py  test_rag_meta_status.py  test_rag_roadmap_a.py
tools/: contracts.py
web/: .gitignore  README.md  package.json
(+115 files in other folders)
