[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpilot"
version = "0.1.0"
description = "Self-hosted log intelligence for Docker / homelab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.29",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.2.5",
  "typer>=0.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "orjson>=3.10",
]

[project.optional-dependencies]
embeddings-local = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
  # Nomic embed uses remote code; transformers 5.5+ passes safe_serialization into NomicBert
  # in ways the v1.5 stack rejects — cap until upstream aligns.
  "transformers>=4.41,<5.5",
  "einops>=0.7",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[project.scripts]
logpilot = "query.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["db*", "ingestor*", "embedder*", "query*", "logpilot*", "tools*", "eval*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Alembic template loads logging config before imports.
"alembic/env.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
